@@ -6,6 +6,7 @@ state={
 	manpower=700000
 	state_category=pastoral
 	history={
+		victory_points={ 13285 1 }
 		owner = HUN
 		add_core_of = HUN
 		add_core_of = TRA
