@@ -5,6 +5,7 @@ state={
 	state_category=rural
 	provinces={ 3700 9661 11630 }
 	history={
+		victory_points={ 3700 1 }
 		owner=HUN
 		add_core_of=AUS
 		add_core_of=HUN
