@@ -5,8 +5,8 @@ state={
 	state_category=city
 	provinces={ 682 686 701 3670 3680 3683 6685 6703 6720 9624 9643 9676 11610 11627 11663 13125 }
 	history={
-		victory_points={ 11610 5 }
-		victory_points={ 6720 1 }
+		victory_points={ 11610 3 }
+		victory_points={ 6720 2 }
 		victory_points={ 6703 1 }
 		victory_points={ 686 1 }
 		owner=HUN
