@@ -5,6 +5,7 @@ state={
 	state_category=rural
 	provinces={ 591 3601 6611 11564 }
 	history={
+		victory_points={ 591 1 }
 		owner=HUN
 		add_core_of=CRO
 		add_core_of = HUN
