@@ -10,7 +10,9 @@ state={
 	}
 	history={
 		victory_points={ 9660 20 }
-		victory_points={ 6700 1 }
+		victory_points={ 6700 3 }
+		victory_points={ 6751 2 }
+		victory_points={ 6716 1 }
 		owner=HUN
 		add_core_of=HUN
 		buildings={
