@@ -9,6 +9,8 @@ state={
 	}
 	history={
 		victory_points={ 3569 10 }
+		victory_points={ 4859 5 }
+		victory_points={ 6562 2 }
 		owner=AUS
 		add_core_of=AUS
 		add_core_of=CZE
