@@ -10,6 +10,7 @@ state={
 	}
 	history={
 		victory_points={ 9427 10 }
+		victory_points={ 6522 1 }
 		owner=AUS
 		add_core_of=AUS
 		add_core_of=GAL
