@@ -6,6 +6,7 @@ state = {
 	provinces = { 438 491 536 3483 3562 9454 9468 9558 11427 11479 }
 	history = {
 		victory_points = { 11479 5 }
+		victory_points = { 11427 2 }
 		owner = AUS
 		add_core_of=AUS
 		add_core_of = GAL
