@@ -46,6 +46,8 @@
  VICTORY_POINTS_9648: "Graz"
  VICTORY_POINTS_11542: "Prague"
  VICTORY_POINTS_3569: "Brno"
+ AUS_VICTORY_POINTS_3569: "Brünn"
+ GER_VICTORY_POINTS_3569: "Brünn"
  VICTORY_POINTS_6418: "Plzen"
  VICTORY_POINTS_6573: "Košice"
  HUN_VICTORY_POINTS_6573: "Kassa"
@@ -861,9 +863,12 @@
  VICTORY_POINTS_3583: "Troppau"
  CZE_VICTORY_POINTS_3583: "Opava"
  VICTORY_POINTS_6562: "Olomouc"
+ AUS_VICTORY_POINTS_6562: "Olmütz"
+ GER_VICTORY_POINTS_6562: "Olmütz"
  VICTORY_POINTS_9569: "Tábor"
- VICTORY_POINTS_9541: "Budweis"
- CZE_VICTORY_POINTS_9541: "České Budějovice"
+ AUS_VICTORY_POINTS_9541: "Budweis"
+ GER_VICTORY_POINTS_9541: "Budweis"
+ VICTORY_POINTS_9541: "České Budějovice"
  VICTORY_POINTS_3585: "Carlsbad"
  CZE_VICTORY_POINTS_3585: "Karlovy Vary"
  VICTORY_POINTS_11432: "Aussig"
@@ -1186,7 +1191,6 @@
  VICTORY_POINTS_4800: "Ulala"
  VICTORY_POINTS_10528: "Verkhneudinsk"
  VICTORY_POINTS_13063: "Anadyr"
- VICTORY_POINTS_4859: "Dudinka"
  VICTORY_POINTS_1684: "Salekhard"
  VICTORY_POINTS_1659: "Khanty-Mansysk"
  VICTORY_POINTS_105: "Naryan Mar"
@@ -2257,6 +2261,19 @@
  VICTORY_POINTS_1500: "Beaumont"
  VICTORY_POINTS_971: "Portsmouth"
  VICTORY_POINTS_1467: "Shusha"
+ VICTORY_POINTS_591: "Gospić"
+ VICTORY_POINTS_3700: "Eisenstadt"
+ HUN_VICTORY_POINTS_3700: "Kismarton"
+ VICTORY_POINTS_13285: "Békéscsaba"
+ VICTORY_POINTS_11427: "Tarnopol"
+ UKR_VICTORY_POINTS_11427: "Ternopil"
+ WUK_VICTORY_POINTS_11427: "Ternopil"
+ VICTORY_POINTS_6751: "Miskolc"
+ VICTORY_POINTS_6716: "Szolnok"
+ VICTORY_POINTS_6522: "Rzeszów"
+ VICTORY_POINTS_4859: "Ostrava"
+ AUS_VICTORY_POINTS_4859: "Ostrau"
+ GER_VICTORY_POINTS_4859: "Ostrau"
 
  #Finnish Independent names
  TAMMISAARI_PROV: "Tammisaari"
