@@ -1,8 +1,9 @@
 Fixed Romanian focus Carp Constitution not removing the King's Opinion
 Fixed Romanian focus Demand Banat not sending event to right country
 Fixed a Romanian event triggering when in Central Powers
-Fixed 'Preventing a Brain Drain' focus bypassing
+Fixed Romanian focus Preventing a Brain Drain bypassing
 Fixed German decision "Fortify Aisne" not working
+Added new Austrian victory points
 Added Czech names for their states and vps when owned by Czechia
 Fixed Austrian focus "End Slav Opposition" bypassing when Bosnia is a subject
 Made Henri Coandă a scientist instead of an advisor
